--- a/public/board.html
+++ b/public/board.html
@@ -5,6 +5,7 @@
     <link rel='stylesheet' href='css/boardstyle.css'>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+    <script src="https://hammerjs.github.io/dist/hammer.js"></script>
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:700' rel='stylesheet' type='text/css'>
 
