--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<video autoplay id="bgvid" loop>
 			<!-- Video is 8MB. Uncomment when ready to show final product. -->
-			<source src="assets/dayinthelifeshort-720p.mov" type="video/mp4">
+			<!-- <source src="assets/dayinthelifeshort-720p.mov" type="video/mp4"> -->
 		</video>
 		<header id="header">
 			<h1>Coderboard</h1>
