troubleshooting signin page not loading

--- a/public/signin.html
+++ b/public/signin.html
@@ -14,7 +14,7 @@
     <header id="header">
       <h1>Signin or Signup</h1>
     </header>
-      <form action="/login" method="post">
+      <form action="/signin" method="post">
           <div>
             <label for="email">Email:</label>
             <input id="email" type="text" name="email">
@@ -24,7 +24,7 @@
             <input id="password" type="password" name="password">
           </div>
           <div>
-            <input type="submit" value="Login">
+            <input type="submit" value="Signin">
           </div>
       </form>
       
