--- a/public/board.html
+++ b/public/board.html
@@ -32,6 +32,10 @@
 
         <div class='pens'>
           <div class='palette'>
+            <input type="checkbox" value="None" id="olive" name="check" ng-click="changePen('olive')"/>
+            <label for="olive"></label>
+          </div>
+          <div class='palette'>
             <input type="checkbox" value="None" id="black" name="check" checked="checked" ng-click="changePen('black')"/>
             <label for="black"></label>
           </div>
@@ -58,6 +62,7 @@
 <script src="http://simplewebrtc.com/latest.js"></script>
 <script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
 <script src="lib/jquery.event.drag-2.2.js"></script>
+<script src="lib/canvasInput.min.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
 <!-- <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script> -->
