--- a/public/board.html
+++ b/public/board.html
@@ -31,6 +31,11 @@
         </div>
 
         <div class='pens'>
+
+          <div class='palette'>
+            <input type="checkbox" value="None" id="white" name="check" ng-click="clearBoard()"/>
+            <label for="white"></label>
+          </div>
           <div class='palette'>
             <input type="checkbox" value="None" id="olive" name="check" ng-click="changePen('olive')"/>
             <label for="olive"></label>
