--- a/public/board.html
+++ b/public/board.html
@@ -31,7 +31,10 @@
         </div>
 
         <div class='pens'>
-
+          <div class='palette'>
+            <input type="checkbox" value="None" id="cyan" name="check" ng-click="undo()"/>
+            <label for="cyan"></label>
+          </div>
           <div class='palette'>
             <input type="checkbox" value="None" id="white" name="check" ng-click="clearBoard()"/>
             <label for="white"></label>
