--- a/public/board.html
+++ b/public/board.html
@@ -32,6 +32,10 @@
 
         <div class='pens'>
           <div class='palette'>
+            <input type="checkbox" value="None" id="purple" name="check" ng-click="rewind()"/>
+            <label for="purple"></label>
+          </div>
+          <div class='palette'>
             <input type="checkbox" value="None" id="cyan" name="check" ng-click="undo()"/>
             <label for="cyan"></label>
           </div>
