--- a/public/board.html
+++ b/public/board.html
@@ -31,10 +31,7 @@
         </div>
 
         <div class='pens'>
-          <div class='palette'>
-            <input type="checkbox" value="None" id="purple" name="check" ng-click="rewind()"/>
-            <label for="purple"></label>
-          </div>
+          <input type="range" class='inline'>
           <div class='palette'>
             <input type="checkbox" value="None" id="cyan" name="check" ng-click="undo()"/>
             <label for="cyan"></label>
