--- a/public/boards.html
+++ b/public/boards.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-controller='boardsController'>
+<html ng-controller='signinController'>
   <head>
     <meta charset="UTF-8">
     <title>Colla-board-rate</title>
@@ -15,7 +15,7 @@
     <input type='text' ng-model='search' placeholder='filter' />
     <div class="links">
       <div class="link"
-          ng-repeat="board in data.boards | filter:search | orderBy:'id'">
+          ng-repeat="board in data | filter:search | orderBy:'id'">
         <div class="info">
           <div class="visits">
             <span class="count">{{ board.name }}</span>
@@ -30,7 +30,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular-route.min.js"></script>
-    <script src='../js/boards.js'></script>
+    <script src='../js/signin.js'></script>
     <script src='../js/services.js'></script>
 
     
