--- a/public/boards.html
+++ b/public/boards.html
@@ -12,12 +12,12 @@
       <!-- <source src="assets/dayinthelifeshort-720p.mov" type="video/mp4"> -->
     </video>
       <h3 id="boardsHeader" >Your Boards</h3>
-      <form ng-controller="BoardsController" name="NewBoardForm" ng-submit='newBoard()'>
+      <form ng-controller="BoardsController" id="newBoardForm" ng-submit='newBoard()'>
         <button>Create New Board</button>
       </form>
     <!-- <input type='text' ng-model='search' placeholder='filter' /> -->
-    <div ng-controller="BoardsController" class="links">
-      <div class="link" ng-repeat="board in data.boards">
+    <div ng-controller="BoardsController" class="boards">
+      <div class="board" ng-repeat="board in data.boards">
         <div class="info">
           <!-- <div class="visits"> -->
             <!-- <span class="count">{{ board.name }}</span> -->
